--- a/css/michael-nederhoeds-radical-site.webflow.css
+++ b/css/michael-nederhoeds-radical-site.webflow.css
@@ -371,7 +371,7 @@ body {
   align-items: center;
   border: 1px none #000;
   border-radius: 0px;
-  background-color: #151515;
+  background-color: #111313;
   text-transform: none;
   -o-object-fit: fill;
   object-fit: fill;
@@ -827,6 +827,7 @@ body {
 
 .div-block-11 {
   position: relative;
+  z-index: 1;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1113,6 +1114,7 @@ body {
   top: auto;
   right: 0%;
   bottom: 6%;
+  z-index: 1;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1318,7 +1320,7 @@ body {
   border-style: solid;
   border-width: 1px;
   border-color: transparent;
-  background-color: #151515;
+  background-color: #111313;
   color: #921b1b;
   background-clip: border-box;
   -webkit-text-fill-color: inherit;
@@ -1484,13 +1486,14 @@ body {
 }
 
 .div-block-16 {
-  position: static;
+  position: relative;
   bottom: 10px;
+  z-index: 1;
   display: block;
   overflow: visible;
   height: auto;
   margin-bottom: 0px;
-  padding-top: 20px;
+  padding-top: 0px;
   padding-bottom: 84px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -1518,10 +1521,13 @@ body {
 }
 
 .div-block-17 {
+  position: relative;
+  z-index: 1;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  padding-bottom: 40px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -1543,7 +1549,7 @@ body {
 
 .text-block-7 {
   position: relative;
-  padding-top: 80px;
+  padding-top: 40px;
   padding-bottom: 50px;
   border-style: none;
   border-width: 1px;
@@ -1681,18 +1687,19 @@ body {
   top: auto;
   right: 0px;
   bottom: 0%;
+  z-index: 0;
   overflow: hidden;
   width: 700px;
   height: 700px;
   margin-left: -15px;
   background-color: rgba(26, 26, 26, 0);
-  opacity: 0.89;
+  opacity: 0.7;
   outline-color: rgba(146, 27, 27, 0);
   outline-offset: 0px;
   outline-style: none;
   outline-width: 3px;
   color: rgba(146, 27, 27, 0);
-  mix-blend-mode: exclusion;
+  mix-blend-mode: normal;
 }
 
 .div-block-19-copy {
@@ -1767,17 +1774,19 @@ body {
   display: block;
   overflow: hidden;
   width: 700px;
-  height: 1000px;
-  margin-top: -68px;
+  height: 1100px;
+  margin-top: -166px;
+  margin-bottom: 0px;
   margin-left: -15px;
+  border-radius: 0px;
   background-color: rgba(26, 26, 26, 0);
-  opacity: 0.89;
+  opacity: 0.7;
   outline-color: rgba(146, 27, 27, 0);
   outline-offset: 0px;
   outline-style: none;
   outline-width: 3px;
   color: rgba(146, 27, 27, 0);
-  mix-blend-mode: exclusion;
+  mix-blend-mode: normal;
 }
 
 .text-block-3-copy {
@@ -1887,6 +1896,8 @@ body {
 }
 
 .text-block-3-copy.textbody-copy.test-copy {
+  position: -webkit-sticky;
+  position: sticky;
   padding-top: 70px;
   padding-bottom: 20px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0.59)), to(hsla(0, 0%, 100%, 0.59))), url('../images/Screenshot-2022-07-03-at-21.59.47.png');
@@ -1981,7 +1992,7 @@ body {
   position: -webkit-sticky;
   position: sticky;
   height: auto;
-  margin-top: -215px;
+  margin-top: -180px;
   padding-top: 0px;
 }
 
@@ -2006,7 +2017,7 @@ body {
 .section-7-copy {
   position: relative;
   width: auto;
-  height: 200vh;
+  height: auto;
   border-style: solid;
   border-width: 1px;
   border-color: transparent;
@@ -2046,7 +2057,7 @@ body {
 }
 
 .image-8 {
-  width: 1200px;
+  width: 850px;
   padding-top: 30px;
   padding-bottom: 40px;
 }
@@ -2072,6 +2083,32 @@ body {
 .tab-link-tab-1.w--current {
   padding-right: 40px;
   padding-left: 40px;
+}
+
+.background-video-4 {
+  position: relative;
+  z-index: 23;
+  overflow: visible;
+  width: 700px;
+  height: 700px;
+  margin-top: 220px;
+  margin-left: -331px;
+  border-radius: 100px;
+  mix-blend-mode: normal;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.background-video-5 {
+  position: -webkit-sticky;
+  position: sticky;
+  width: 800px;
+  height: 800px;
+  margin-left: 206px;
+  border-radius: 600px;
+  mix-blend-mode: normal;
+  -o-object-fit: fill;
+  object-fit: fill;
 }
 
 @media screen and (max-width: 991px) {
